Corrected all contrast issues. W02 Team Activity.

--- a/styles/base.css
+++ b/styles/base.css
@@ -89,6 +89,7 @@ h1 {
 
 h2 {
     background-color: rgb(49, 101, 150);
+    color: rgb(243, 243, 245);
     margin: 0;
 }
 
@@ -108,7 +109,7 @@ main .card li {
 
 footer {
     text-align: center;
-    background-color: rgb(49, 101, 150);
+    background-color: rgb(8, 55, 99);
     font-family: Roboto;
     color: rgb(243, 243, 245);
     padding: 10px;
@@ -117,5 +118,5 @@ footer {
 
 #lastModified {
     font-family: Roboto;
-    color: rgb(236, 236, 18);
+    color: rgb(243, 243, 245);
 }
